--- a/UI/forms/obs.qrc
+++ b/UI/forms/obs.qrc
@@ -60,5 +60,6 @@
     <file>images/settings/audio.svg</file>
     <file>images/settings/general.svg</file>
     <file>images/settings/hotkeys.svg</file>
+    <file>images/settings/login.svg</file>
   </qresource>
 </RCC>
